404 error trying it recommit

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                  <h4 class="mdl-card__title-text">Monthly subscription</h4>
               </div>
               <div class="mdl-card__supporting-text">
-                <span class="mdl-typography--font-light mdl-typography--subhead">$19/month<br><br>2 weeks gone too fast? Want to get some more taste of Messkil? Buy it for month. No long-term obligations.</span>
+                <span class="mdl-typography--font-light mdl-typography--subhead">$19/month<br><br>2 weeks gone too fast? Want to get some more taste of Messkil? Buy it for month. No long-term obligations</span>
               </div>
               <div class="mdl-card__actions">
                  <a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
