Removed menu button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         </div>
       </div>
 
-      <div class="android-drawer mdl-layout__drawer">
+      <!-- <div class="android-drawer mdl-layout__drawer">
         <span class="mdl-layout-title">
           <img class="android-logo-image" src="images/android-logo-white.png">
         </span>
@@ -115,20 +115,20 @@
           <a class="mdl-navigation__link" href="">Android Open Source Project</a>
           <a class="mdl-navigation__link" href="">Android SDK</a>
         </nav>
-      </div>
+      </div> -->
 
       <div class="android-content mdl-layout__content">
         <a name="top"></a>
         <div class="android-be-together-section mdl-typography--text-center"> <div class="logo-font android-slogan">more meaningful talks. less mess.</div>
           <div class="logo-font android-sub-slogan">welcome to messkil... be yourself. do your thing. make no mess.</div> <div class="logo-font android-create-character">
-            <a href=""><img src="images/messy.png"> connect your messengers</a>
+            <a href="#connect"><img src="images/messy.png"> connect your messengers</a>
           </div>
 
-          <a href="#screens">
+          <!-- <a href="#screens">
             <button class="android-fab mdl-button mdl-button--colored mdl-js-button mdl-button--fab mdl-js-ripple-effect">
               <i class="material-icons">expand_more</i>
             </button>
-          </a>
+          </a> -->
         </div>
        <!--  <div class="android-screen-section mdl-typography--text-center">
           <a name="screens"></a>
@@ -173,7 +173,7 @@
 
 
 
-        <div class="android-wear-section">
+        <div id="connect" class="android-wear-section">
           <div class="android-wear-band">
             <div class="android-wear-band-text">
               <div class="mdl-typography--display-2 mdl-typography--font-thin">The best app of it's kind</div>
