--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
 <!doctype html>
-<!--
-  Material Design Lite
-  Copyright 2015 Google Inc. All rights reserved.
-
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-
-      https://www.apache.org/licenses/LICENSE-2.0
-
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License
--->
-
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
+    <meta name="description" content="Introducing Messkil, a clean new take on messaging.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Messkil</title>
 
@@ -178,7 +161,7 @@
             <div class="android-wear-band-text">
               <div class="mdl-typography--display-2 mdl-typography--font-thin">The best app of it's kind</div>
               <p class="mdl-typography--headline mdl-typography--font-thin">
-                Messkil works perfectly with your favourite apps like Gmail,
+                Messkil works perfectly with your favorite apps like Gmail,
                 Messenger and Linkedin.
               </p>
               <p>
@@ -191,11 +174,11 @@
         </div>
         <div id="custom" class="android-customized-section">
           <div class="android-customized-section-text">
-            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Customised for you</div>
+            <div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Customized for you</div>
             <p class="mdl-typography--font-light">
               Didn't find your favourite app or need some customization? Let us know! The list of supporter apps is continuously growing. We'll do our best to integreate it for you.
               <br>
-              <a href="" class="android-link mdl-typography--font-light">Customise your Messkil</a>
+              <a href="" class="android-link mdl-typography--font-light">Customize your Messkil</a>
             </p>
           </div>
           <div class="android-customized-section-image"></div>
